[gd_scene load_steps=6 format=3 uid="uid://dag2dn8ys284n"]

[ext_resource type="Script" path="res://area2d/area2d_load.gd" id="1_7wv80"]
[ext_resource type="Texture2D" uid="uid://dxvweghqhlqmv" path="res://resources/sprite/actor001/actor001_win_01.png" id="2_14pa1"]
[ext_resource type="Texture2D" uid="uid://br7733mi0v430" path="res://resources/sprite/actor001/actor001_win_02.png" id="3_s28b8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_07eur"]
size = Vector2(96, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2fi8"]
size = Vector2(96, 150)

[node name="area2d_load" type="Node2D"]
script = ExtResource("1_7wv80")

[node name="Area2D_Player" type="Area2D" parent="."]
position = Vector2(567, 195)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Player"]
shape = SubResource("RectangleShape2D_07eur")

[node name="Sprite2D" type="Sprite2D" parent="Area2D_Player"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("2_14pa1")

[node name="Label" type="Label" parent="Area2D_Player"]
offset_left = -24.0
offset_top = -98.0
offset_right = 25.0
offset_bottom = -75.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Player"

[node name="Area2D_Load_In_Editor" type="Area2D" parent="."]
position = Vector2(184, 464)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Load_In_Editor"]
shape = SubResource("RectangleShape2D_g2fi8")

[node name="Sprite2D" type="Sprite2D" parent="Area2D_Load_In_Editor"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("3_s28b8")

[node name="Label" type="Label" parent="Area2D_Load_In_Editor"]
offset_left = -52.0
offset_top = 76.0
offset_right = 56.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Sensor
Load In Editor
"
horizontal_alignment = 1

[node name="Area2D_Load_Shape_In_Script" type="Area2D" parent="."]
position = Vector2(565, 465)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D_Load_Shape_In_Script"]

[node name="Sprite2D" type="Sprite2D" parent="Area2D_Load_Shape_In_Script"]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("3_s28b8")

[node name="Label" type="Label" parent="Area2D_Load_Shape_In_Script"]
offset_left = -77.0
offset_top = 76.0
offset_right = 82.0
offset_bottom = 125.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Sensor
Load Shape In Script
"
horizontal_alignment = 1

[node name="Label" type="Label" parent="."]
offset_left = 609.0
offset_top = 6.0
offset_right = 649.0
offset_bottom = 29.0
scale = Vector2(3, 3)
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "X"

[connection signal="area_entered" from="Area2D_Player" to="." method="_on_area_2d_player_area_entered"]
[connection signal="area_exited" from="Area2D_Player" to="." method="_on_area_2d_player_area_exited"]
